# service-types-authority

./: .gitignore  .gitreview  .zuul.yaml  README.rst  publish.py  published-schema.json  requirements.txt  ruff.toml  schema.json  service-types.yaml  setup.cfg  setup.py  tox.ini  transform.py  validate.py
doc/source/: conf.py  index.rst  published-schema.json  service-types.yaml
playbooks/: fetch-publish-output.yaml
